# HW_M02_goit_py_DS

./: 2017_jun_final_clean_and_updated.csv  Hw2.1.ipynb  Hw2.2.ipynb  README.md  extension_vsc.txt  hw2.1.py  hw2.2.py  hw2.3.ipynb  pyproject.toml
