[tool.poetry]
name = "MODULE-02 Python Data Science"
version = "0.1.0"
description = "Introduction Data Science"
authors = ["Rishniak Valerii"]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
tqdm = "^4.66.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn ="^1.3.2"
jupyter = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"